--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^20.2.3",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-redux": "^7.1.25",
+    "@types/redux": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
